# plasma

./: .gitignore  Cargo.toml  LICENSE  README.md  calculate-pda.ts  start-test-validator
crates/plasma_state/: Cargo.toml
crates/plasma_state/fuzz/: Cargo.toml
crates/plasma_state/fuzz/fuzz_targets/: fuzz-amm.rs  fuzz-lp-amm.rs
crates/plasma_state/fuzz/src/: lib.rs
crates/plasma_state/src/: amm.rs  errors.rs  fixed.rs  lib.rs  lp.rs
idl/: generateIdlAndClient.js  plasma.json
plasma-sdk/: package.json  tsconfig.json
plasma-sdk/examples/: plasmaLogSubscribe.ts
plasma-sdk/tests/: FixedPoint.test.ts  devnetTests.ts  test.ts
plasma-sdk/util/: FixedPoint.ts  calculate-pda.js
program/: Cargo.toml
program/src/: autogen_client_structs.rs  lib.rs
program/src/program/: accounts.rs  events.rs  instruction.rs  mod.rs  token_utils.rs
program/src/program/processor/: fees.rs  initialize.rs  liquidity.rs  mod.rs  swap.rs
program/src/program/validation/: loaders.rs
program/src/program/validation/checkers/: mod.rs  plasma_checkers.rs  token_checkers.rs
