[workspace]
resolver = "2"
members = [
    "program",
    "crates/*",
]
exclude = ["crates/plasma_state/fuzz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bs58 = "0.5.0"
bytemuck = { version = "1.14.3", features = [ "derive" ] }
borsh = "0.10.0"
ellipsis-macros = "0.1.0"
num_enum = "0.7.2"
plasma_state = { version = "0.1.0", path = "crates/plasma_state" }
shank = "0.3.0"
solana-program = "^1.16"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] } 
static_assertions = "1.1.0"
thiserror = "1.0.57"