[package]
name = "plasma"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "plasma"

[features]
autogen-client-structs = []
no-entrypoint = []
default = []

[dependencies]
bs58 = { workspace = true }
bytemuck = { workspace = true }
borsh = { workspace = true }
ellipsis-macros = { workspace = true }
num_enum = { workspace = true }
plasma_state = { workspace = true, features = ["borsh"] }
shank = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }